[gd_scene load_steps=6 format=3 uid="uid://wlfifjj1hj3t"]

[ext_resource type="Script" path="res://scripts/control.gd" id="1_6u4mi"]
[ext_resource type="Theme" uid="uid://c8csw2huunlm7" path="res://assets/menu/fontMenu.tres" id="2_idyh2"]
[ext_resource type="Texture2D" uid="uid://hyqddi4tqra5" path="res://scenes/ui/ContolBarRus.png" id="3_24ciy"]
[ext_resource type="Texture2D" uid="uid://bsccf1crs77jw" path="res://assets/ui/ControlBarHead.png" id="4_uxgjw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ty25w"]
bg_color = Color(0.938143, 0.41706, 0.301457, 1)

[node name="Control" type="CanvasLayer"]
script = ExtResource("1_6u4mi")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_right = 1920.0
offset_bottom = 39.0
theme_override_styles/fill = SubResource("StyleBoxFlat_ty25w")
show_percentage = false

[node name="KillLabel" type="Label" parent="."]
offset_left = 6.0
offset_top = 40.0
offset_right = 133.0
offset_bottom = 94.0
size_flags_horizontal = 4
theme = ExtResource("2_idyh2")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "KILLS: 0"
uppercase = true

[node name="LevelLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.5
offset_top = 50.0
offset_right = 52.5
offset_bottom = 104.0
grow_horizontal = 2
size_flags_horizontal = 4
theme = ExtResource("2_idyh2")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Level: 0"
uppercase = true

[node name="CoinLabel" type="Label" parent="."]
offset_left = 1765.0
offset_top = 40.0
offset_right = 1914.0
offset_bottom = 94.0
size_flags_horizontal = 4
theme = ExtResource("2_idyh2")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "COINS: 0"
uppercase = true

[node name="ContolBarRus" type="Sprite2D" parent="."]
position = Vector2(1008, 24)
scale = Vector2(1.10878, 2.93333)
texture = ExtResource("3_24ciy")

[node name="ControlBarHead" type="Sprite2D" parent="."]
position = Vector2(952, 29)
scale = Vector2(0.135547, 0.125781)
texture = ExtResource("4_uxgjw")
